--- a/index.html
+++ b/index.html
@@ -107,7 +107,135 @@
             <div>
 
             </div>
+        </section> 
+        <section class="section-your-option">
+            <h2>Your Option</h2>
+            <div class="option-header">
+                <h2>Question</h2>
+                <h2>Select Option</h2>
+            </div>
+            <div class="option-body">
+                <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+                <div class="select-option">
+                    <select name="" id="">
+                        <option value="Yes, I agree">Yes, I agree</option>
+                        <option value="Yes, I agree">Yes, I agree</option>
+                    </select>
+                </div>
+            </div>
+            <div class="option-body">
+                <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+                <div class="select-option">
+                    <select name="" id="">
+                        <option value="Yes, I agree">Yes, I agree</option>
+                        <option value="Yes, I agree">Yes, I agree</option>
+                    </select>
+                </div>
+            </div>
+            <div class="option-body">
+                <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+                <div class="select-option">
+                    <select name="" id="">
+                        <option value="Yes, I agree">Yes, I agree</option>
+                        <option value="Yes, I agree">Yes, I agree</option>
+                    </select>
+                </div>
+            </div>
         </section>
+        <section class="news">
+            <h1>Recent News</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="new-card">
+                <img src="B11A1--assignment-1/assets/satelite.png" alt="">
+                <div>
+                    <h1>Bangladesh Launches New Satellite</h1>
+                    <img src="B11A1--assignment-1/assets/al-jazeera.png" alt="">
+                    <div class="time">
+                        <p>Date: 05/01/2025</p>
+                        <p>Time: 10.25 PM</p>
+                    </div>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button>Read More</button>
+                </div>
+            </div>
+            <div class="new-card card2">
+                <img src="B11A1--assignment-1/assets/satelite.png" alt="">
+                <div>
+                    <h1>Bangladesh Launches New Satellite</h1>
+                    <img src="B11A1--assignment-1/assets/al-jazeera.png" alt="">
+                    <div class="time">
+                        <p>Date: 05/01/2025</p>
+                        <p>Time: 10.25 PM</p>
+                    </div>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button>Read More</button>
+                </div>
+            </div>
+            <!-- <div class="new-card-another">
+                <img src="B11A1--assignment-1/assets/al-jazeera.png" alt="">
+                <div>
+                    <h1>Bangladesh Launches New Satellite</h1>
+                    <img src="as" alt="">
+                    <div class="time">
+                        <p>Date: 05/01/2025</p>
+                        <p>Time: 10.25 PM</p>
+                    </div>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button>Read More</button>
+                </div> -->
+            <!-- </div> -->
+            <div class="new-card">
+                <img src="" alt="">
+                <div>
+                    <h1>Bangladesh Launches New Satellite</h1>
+                    <img src="../al-jazeera.png" alt="">
+                    <div class="time">
+                        <p>Date: 05/01/2025</p>
+                        <p>Time: 10.25 PM</p>
+                    </div>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button>Read More</button>
+                </div>
+            </div>
+        </section>
+        <section class="donate">
+            <div class="donate-heading">
+                <h1>Donate Today</h1>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            </div>
+            <div class="donate-btn">
+                <button>100 Taka</button>
+                <button>200 Taka</button>
+                <button>500 Taka</button>
+                <button>1000 Taka</button>
+            </div>
+            <input type="text" placeholder="Another amount (Taka)">
+            <div  class="donate-done-btn">
+                <button>Done Now</button>
+            </div>
+        </section>
+        <section class="subscribe">
+            <h1>Subscribe Newsletter</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+            <form>
+                <input class="email-input" type="text" placeholder="Enter your email here">
+                <input class="input-btn" type="submit" value="Submit">
+            </form>
+        </section>
+        
     </main>
 </body>
+<footer class="footer">
+    <h1>Bangladesh 2.0</h1>
+    <div class="social">
+        <img src="B11A1--assignment-1/assets/facebook.png" alt="">
+        <img src="B11A1--assignment-1/assets/instagram.png" alt="">
+        <img src="B11A1--assignment-1/assets/x.png" alt="">
+    </div>
+</footer>
+
 </html>
