--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 
 <body>
-    <header>
+    <header class="header">
       <div class="banner">
         <div class="banner-containt">
             <h3 class="title">Bangladesh 2.0</h3>
@@ -23,7 +23,7 @@
         <img class="banner-img" src="B11A1--assignment-1/assets/hero.png" alt="">
       </div>
     </header>
-    <main>
+    <main class="header">
         <section>
             <h2 class="box-title">Pillars of "Bangladesh 2.0"</h2>
             <div class="box-item">
@@ -81,7 +81,7 @@
             <p class="dr-discription">Chief Adviser of the People's Republic of Bangladesh</p>
         </section>
 
-        <section class="section5">
+        <!-- <section class="section5">
             <h3>Your Opinion Matters</h3>
             <div class="section5-containar">
                 <div class="section-head">
@@ -97,17 +97,17 @@
                 </div>
             </div>
 
-        </section>
+        </section> -->
 
 
 
-        <section>
+        <!-- <section>
             <h3 class="section4-title">Recent News</h3>
             <p class="section4-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
             <div>
 
             </div>
-        </section> 
+        </section>  -->
         <section class="section-your-option">
             <h2>Your Option</h2>
             <div class="option-header">
@@ -156,7 +156,7 @@
                     </div>
                     <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
-                    <button>Read More</button>
+                    <button class="btn-read">Read More</button>
                 </div>
             </div>
             <div class="new-card card2">
@@ -170,7 +170,7 @@
                     </div>
                     <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
-                    <button>Read More</button>
+                    <button class="btn-read">Read More</button>
                 </div>
             </div>
             <!-- <div class="new-card-another">
@@ -188,17 +188,17 @@
                 </div> -->
             <!-- </div> -->
             <div class="new-card">
-                <img src="" alt="">
+                <img src="B11A1--assignment-1/assets/satelite.png" alt="">
                 <div>
                     <h1>Bangladesh Launches New Satellite</h1>
-                    <img src="../al-jazeera.png" alt="">
+                    <img src="B11A1--assignment-1/assets/al-jazeera.png" alt="">
                     <div class="time">
                         <p>Date: 05/01/2025</p>
                         <p>Time: 10.25 PM</p>
                     </div>
                     <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
-                    <button>Read More</button>
+                    <button class="btn-read">Read More</button>
                 </div>
             </div>
         </section>
@@ -215,11 +215,11 @@
             </div>
             <input type="text" placeholder="Another amount (Taka)">
             <div  class="donate-done-btn">
-                <button>Done Now</button>
+                <button class="btn-done">Done Now</button>
             </div>
         </section>
         <section class="subscribe">
-            <h1>Subscribe Newsletter</h1>
+            <h1 class="">Subscribe Newsletter</h1>
             <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
             <form>
                 <input class="email-input" type="text" placeholder="Enter your email here">
