fack file remove

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
             <input type="text" placeholder="Another amount (Taka)">
             <div  class="donate-done-btn">
-                <button class="btn-done">Done Now</button>
+                <button class="btn-">Done Now</button>
             </div>
         </section>
         <section class="subscribe">
