remove fack file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button class="btn-primary">Explore New Bangladesh</button>
 
         </div>
-        <img class="banner-img" src="B11A1--assignment-1/assets/hero.png" alt="">
+        <img class="banner-img" src="resorce/assets/hero.png" alt="">
       </div>
     </header>
     <main class="header">
@@ -28,22 +28,22 @@
             <h2 class="box-title">Pillars of "Bangladesh 2.0"</h2>
             <div class="box-item">
                 <div class="box">
-                    <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+                    <img src="resorce/assets/card-icon.png" alt="">
                     <h4 class="box-subtitle">Innovation</h4>
                     <p class="box-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
                 <div class="box">
-                    <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+                    <img src="resorce/assets/card-icon.png" alt="">
                     <h4 class="box-subtitle">Sustainability</h4>
                     <p class="box-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
                 <div class="box">
-                    <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+                    <img src="resorce/assets/card-icon.png" alt="">
                     <h4 class="box-subtitle">Infrastructure</h4>
                     <p class="box-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
                 <div class="box">
-                    <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+                    <img src="resorce/assets/card-icon.png" alt="">
                     <h4 class="box-subtitle">Empowerment</h4>
                     <p class="box-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
@@ -56,19 +56,19 @@
            </div>
            <div class="color-box">
             <div class="box1">
-                <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+                <img src="resorce/assets/card-icon.png" alt="">
                 <h4 class="color-title">Digital Transformation</h4>
                 <p class="color-subtitle">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
                 <button class="btn-blue">Learn More</button>
             </div>
             <div class="box2">
-                <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+                <img src="resorce/assets/card-icon.png" alt="">
                 <h4 class="color-title">Green Energy</h4>
                 <p class="color-subtitle">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
                 <button class="btn-green">Learn More</button>
             </div>
             <div class="box3">
-                <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+                <img src="resorce/assets/card-icon.png" alt="">
                 <h4 class="color-title">Modern Infrastructure</h4>
                 <p class="color-subtitle">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
                 <button class="btn-rad">Learn More</button>
@@ -146,10 +146,10 @@
             <h1>Recent News</h1>
             <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
             <div class="new-card">
-                <img src="B11A1--assignment-1/assets/satelite.png" alt="">
+                <img src="resorce/assets/satelite.png" alt="">
                 <div>
                     <h1>Bangladesh Launches New Satellite</h1>
-                    <img src="B11A1--assignment-1/assets/al-jazeera.png" alt="">
+                    <img src="resorce/assets/al-jazeera.png" alt="">
                     <div class="time">
                         <p>Date: 05/01/2025</p>
                         <p>Time: 10.25 PM</p>
@@ -160,10 +160,10 @@
                 </div>
             </div>
             <div class="new-card card2">
-                <img src="B11A1--assignment-1/assets/satelite.png" alt="">
+                <img src="resorce/assets/satelite.png" alt="">
                 <div>
                     <h1>Bangladesh Launches New Satellite</h1>
-                    <img src="B11A1--assignment-1/assets/al-jazeera.png" alt="">
+                    <img src="resorce/assets/al-jazeera.png" alt="">
                     <div class="time">
                         <p>Date: 05/01/2025</p>
                         <p>Time: 10.25 PM</p>
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <!-- <div class="new-card-another">
-                <img src="B11A1--assignment-1/assets/al-jazeera.png" alt="">
+                <img src="resorce/assets/al-jazeera.png" alt="">
                 <div>
                     <h1>Bangladesh Launches New Satellite</h1>
                     <img src="as" alt="">
@@ -188,10 +188,10 @@
                 </div> -->
             <!-- </div> -->
             <div class="new-card">
-                <img src="B11A1--assignment-1/assets/satelite.png" alt="">
+                <img src="resorce/assets/satelite.png" alt="">
                 <div>
                     <h1>Bangladesh Launches New Satellite</h1>
-                    <img src="B11A1--assignment-1/assets/al-jazeera.png" alt="">
+                    <img src="resorce/assets/al-jazeera.png" alt="">
                     <div class="time">
                         <p>Date: 05/01/2025</p>
                         <p>Time: 10.25 PM</p>
@@ -232,9 +232,9 @@
 <footer class="footer">
     <h1>Bangladesh 2.0</h1>
     <div class="social">
-        <img src="B11A1--assignment-1/assets/facebook.png" alt="">
-        <img src="B11A1--assignment-1/assets/instagram.png" alt="">
-        <img src="B11A1--assignment-1/assets/x.png" alt="">
+        <img src="resorce/assets/facebook.png" alt="">
+        <img src="resorce/assets/instagram.png" alt="">
+        <img src="resorce/assets/x.png" alt="">
     </div>
 </footer>
 
